# Horizon-OS

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  SUMMARY.md
.github/workflows/: ci.yml
crates/aura/: Cargo.toml
crates/aura/src/: error.rs  lib.rs  plan.rs  semantic.rs  tool.rs
crates/boot/: Cargo.toml
crates/boot/src/: error.rs  lib.rs
crates/cells/src/: lib.rs  linux.rs
crates/cells/tests/: cells.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: drm.rs  error.rs  layout.rs  lib.rs  render.rs  server.rs  softdrm.rs  winit.rs
crates/compositor/tests/: compositor.rs  input.rs  multimonitor.rs  render.rs
crates/constellation/: Cargo.toml
crates/constellation/src/: discovery.rs  error.rs  lib.rs  transport.rs
crates/constellation/src/net/: mod.rs  noise.rs  punch.rs  rendezvous.rs  tls.rs  wire.rs
crates/constellation/tests/: constellation.rs  discovery.rs  net.rs  punch.rs
crates/glass/tests/: glass.rs
crates/horizon/: Cargo.toml
crates/horizon/src/: main.rs
crates/init/: Cargo.toml
crates/init/src/: error.rs  lib.rs  linux.rs  main.rs
crates/keybuild/: Cargo.toml
crates/keybuild/src/: error.rs  fat.rs  gpt.rs  lib.rs  luks.rs  main.rs
crates/lifestream/: Cargo.toml
crates/lifestream/src/: chunker.rs  crypto.rs  error.rs  lib.rs  object.rs  store.rs
crates/lifestream/tests/: lifestream.rs
crates/reconstitution/: Cargo.toml
crates/reconstitution/src/: error.rs  gf.rs  lib.rs
crates/reconstitution/tests/: reconstitution.rs
crates/weave/src/: broker.rs
crates/weave/tests/: weave.rs
docs/: 00-IDEA-BOARD.md  01-VISION.md  02-ARCHITECTURE.md  03-PORTABILITY-AND-BOOT.md  04-SECURITY-AND-PRIVACY.md  05-AI-LAYER.md  06-TECH-STACK.md  07-ROADMAP.md  08-WEBSITE-AND-INSTALLER.md  09-OPEN-QUESTIONS.md
