[package]
name = "boot"
description = "Horizon boot: bring a device up into its identity (unlock the master by security key, token, or passphrase, then open the store)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lifestream = { path = "../lifestream" }
identity = { path = "../identity" }
argon2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
