[package]
name = "compositor"
description = "Horizon Wayland compositor: a headless-testable Smithay server, the L5 experience core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true

# The compositor is a Linux Wayland server built on Smithay. On other hosts the
# crate still compiles (so the workspace builds on darwin) but there is no
# Compositor, only `available()` reporting false. Only the wayland_frontend and
# desktop features are pulled: a real Wayland server plus the scene graph, no
# display backend (winit/DRM) and no GPU renderer, so the core builds and tests
# headlessly. The one system dependency this draws in is libxkbcommon (the seat
# keyboard compiles an xkb keymap); the rest of the Wayland stack is pure Rust.
[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "desktop"] }

[dev-dependencies]
tempfile.workspace = true

# The tests drive a real, in-process Wayland client against the server over its
# socket, so they exercise the protocol end to end with no display.
[target.'cfg(target_os = "linux")'.dev-dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", default-features = false, features = ["client"] }
