[package]
name = "constellation"
description = "Cloudless object sync of the Lifestream between your own devices"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lifestream = { path = "../lifestream" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
