[package]
name = "init"
description = "Horizon initramfs init: assemble the immutable-base + writable-overlay root and switch_root into horizon boot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "init"
path = "src/lib.rs"

# The init that becomes PID 1 in the initramfs. The whole boot plan lives in the
# library (tested with no devices); this binary builds a plan from the kernel
# command line and runs it.
[[bin]]
name = "horizon-init"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
# Build the authenticator the initramfs recovers the master through (a software token,
# or a FIDO2 key under the fido2 feature). The crate without its fido2 feature is pure
# Rust and builds on every host (the authenticator selection is used only on the Linux
# init path), so it is a plain dependency, which also lets the feature below refer to
# it on all targets.
identity = { path = "../identity" }

# The FIDO2 touch-to-boot path: building it links identity's USB-HID FIDO2 backend
# (ctap-hid-fido2 -> hidapi -> libudev) into the initramfs init. Off by default, so a
# plain Key build stays passphrase/software-token only and pulls no extra system
# libraries; turn it on for a Key that recovers the master from a security key.
[features]
fido2 = ["identity/fido2"]

# Assembling the root is Linux kernel work (mount, overlayfs, switch_root). On other
# hosts the crate still compiles (so the workspace builds on darwin) but the executor
# is absent; the plan and its tests are pure and build everywhere.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "fs", "process", "feature"] }
libc = "0.2"
# The initramfs binary recovers the identity master from the store (discover + unlock)
# to open the encrypted Home layer before assembling the overlay. Only the Linux init
# path uses it, so the dependency is Linux-only and the library stays free of it.
boot = { path = "../boot" }

[dev-dependencies]
tempfile.workspace = true
