[package]
name = "keybuild"
description = "Build the filesystems of a Horizon Key: the reproducible immutable base image the init boots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "keybuild"
path = "src/lib.rs"

# The host-side tool that builds a Key's images.
[[bin]]
name = "horizon-keybuild"
path = "src/main.rs"

[dependencies]
# The build emits what init consumes (the labels, the boot command line), so it shares
# init's types: the build/boot contract lives in one place.
init = { path = "../init" }
# Provisioning derives the Home layer's master from the store passphrase and the store's
# own salt, the same canonical Argon2id derivation boot recovers it by at boot, so the key
# home.img is built with always matches the one a Home boot unlocks it with.
boot = { path = "../boot" }
thiserror.workspace = true
# dm-verity over the base is a SHA-256 Merkle hash tree (the format veritysetup writes),
# so the hash primitive is SHA-256, not the BLAKE3 the Lifestream addresses with.
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
# The keystone integration test builds a Key, assembles it through the init, and proves
# horizon boot opens the identity on it, so it reaches across the whole boot path.
lifestream = { path = "../lifestream" }
identity = { path = "../identity" }
