[package]
name = "lifestream"
description = "Content-addressed, encrypted, versioned state store for Horizon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
