[package]
name = "reconstitution"
description = "Shamir k-of-n recovery shares for a Horizon identity secret"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
rand.workspace = true
thiserror.workspace = true
hex.workspace = true
